minecraft-stack/minecraft-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
        role: minecraft-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: minecraft-server
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
              protocol: TCP
            - containerPort: 8100
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /data
            - name: ops-configmap
              mountPath: /data/ops.json
              subPath: ops.json
            - name: plugins-configmap
              mountPath: /extras/mods.txt
              subPath: mods.txt
            - name: essentias-configmap
              mountPath: /data/plugins/Essentials/config.yml
              subPath: config.yml
            - name: core-configmap
              mountPath: /data/plugins/BlueMap/core.conf
              subPath: core.conf
            - name: plugin-configmap
              mountPath: /data/plugins/BlueMap/plugin.conf
              subPath: plugin.conf
            - name: webapp-configmap
              mountPath: /data/plugins/BlueMap/webapp.conf
              subPath: webapp.conf
            - name: webserver-configmap
              mountPath: /data/plugins/BlueMap/webserver.conf
              subPath: webserver.conf
            - name: multiverse-core-configmap
              mountPath: /data/plugins/Multiverse-Core/config.yml
              subPath: config.yml
            - name: cookieminion-configmap
              mountPath: /data/plugins/CookieMinion/config.yml
              subPath: config.yml
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: minecraft-server-config-pvc
        - name: ops-configmap
          configMap:
            name: ops-config
        - name: essentias-configmap
          configMap:
            name: essentials-config
        - name: plugins-configmap
          configMap:
            name: minecraft-plugins
        - name: core-configmap
          configMap:
            name: core-config
        - name: plugin-configmap
          configMap:
            name: plugin-config
        - name: webapp-configmap
          configMap:
            name: webapp-config
        - name: webserver-configmap
          configMap:
            name: webserver-config
        - name: multiverse-core-configmap
          configMap:
            name: cookieminion-config
        - name: cookieminion-configmap
          configMap:
            name: cookieminion-config
