minecraft-stack/minecraft-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-service
  namespace: minecraft-stack
spec:
  selector:
    app: minecraft-server
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: minecraft-server-nodeport-25565-service
  namespace: minecraft-stack
spec:
  type: NodePort
  selector:
    app: minecraft-server
  ports:
    - protocol: TCP
      port: 25565
      targetPort: 25565
      nodePort: 30065 # Ensure this port is open on your nodes
    - protocol: UDP
      port: 25565
      targetPort: 25565
      nodePort: 30065 # Ensure this port is open on your nodes
---
apiVersion: v1
kind: Service
metadata:
  name: bluemap-mc-server-service
  namespace: minecraft-stack
spec:
  selector:
    app: minecraft-server
  ports:
    - protocol: TCP
      port: 8100
      targetPort: 8100
  type: ClusterIP
