minecraft-stack/minecraft-server/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluemap-internal-ingress
  namespace: minecraft-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    gethomepage.dev/description: BlueMap is a Minecraft map renderer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Minecraft
    gethomepage.dev/name: BlueMap
    gethomepage.dev/ping: bluemap.rke
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: bluemap.rke  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap-mc-server-service
                port:
                  number: 8100
